--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,13 @@
     <string name="title_cafe">کافه ها</string>
     <string name="title_news">مطالب</string>
     <string name="title_event">رویداد ها</string>
+    <string name="title_video">ویدیو ها</string>
     <string name="title_map">نقشه</string>
 
     <string name="activity_about">درباره کافه یاب</string>
     <string name="activity_cafe_list">فهرست کافه ها</string>
     <string name="activity_news_list">فهرست مطالب</string>
     <string name="activity_event_list">فهرست رویداد ها</string>
+    <string name="activity_video_list">فهرست ویدیو ها</string>
     <string name="activity_map_list">کافه های اطراف</string>
 </resources>
