--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,14 @@
     <string name="title_video">ویدیو ها</string>
     <string name="title_map">نقشه</string>
 
+    <string name="activity_main">کافه یاب</string>
     <string name="activity_about">درباره کافه یاب</string>
     <string name="activity_cafe_list">فهرست کافه ها</string>
     <string name="activity_news_list">فهرست مطالب</string>
     <string name="activity_event_list">فهرست رویداد ها</string>
     <string name="activity_video_list">فهرست ویدیو ها</string>
-    <string name="activity_map_list">کافه های اطراف</string>
+    <string name="activity_map_list">کافه های اطراف بر روی نقشه</string>
+
+    <string name="backdrop_title">کافه یاب مرجع کافه های ایران</string>
+    <string name="backdrop_subtitle">فهرست کافه های شهر های مختلف ایران به همراه ویدیو ها ، رویداد ها و مطالب مرتبط در دسترس شما است </string>
 </resources>
