--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
     <string name="activity_video_list">فهرست ویدیو ها</string>
     <string name="activity_map_list">کافه های اطراف بر روی نقشه</string>
 
-    <string name="backdrop_title">کافه یاب مرجع کافه های ایران</string>
-    <string name="backdrop_subtitle">فهرست کافه های شهر های مختلف ایران به همراه ویدیو ها ، رویداد ها و مطالب مرتبط در دسترس شما است </string>
+    <string name="backdrop_title">کافه یاب</string>
+    <string name="backdrop_subtitle">فهرست کافه های شهر های مختلف ایران</string>
 </resources>
