--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="activity_video_list">فهرست ویدیو ها</string>
     <string name="activity_map_list">کافه‌های اطراف بر روی نقشه</string>
     <string name="activity_search">جستجو</string>
+    <string name="activity_user">کاربر</string>
 
     <string name="activity_event_single">اطلاعات رویداد</string>
     <string name="activity_video_single">اطلاعات ویدیو</string>
