--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,14 +71,6 @@
     <string name="action_settings">Settings</string>
 
 
-
-
-
-
-
-
-
-
     <string name="attribute_workingHour">ساعت کار</string>
     <string name="attribute_parkingSpace">جای پارک</string>
     <string name="attribute_wifi">اینترنت</string>
@@ -123,5 +115,12 @@
     <string name="listTitle5">سایر امکانات</string>
 
     <string name="on_map">بر روی نقشه</string>
+
+    <!--    Permissions    -->
+    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
+    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
+    <string name="permission_required_toast">Location permission is required for this demo.</string>
+
+
 
 </resources>
