--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,8 @@
     <string name="on_map">بر روی نقشه</string>
 
     <string name="relatedVideos">ویدیو های مشابه</string>
+    <string name="listEventTitle">اطلاعات رویداد</string>
+    <string name="eventRegister">شرایط ثبت نام</string>
 
     <!--    Permissions    -->
     <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
