--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Cafeyab</string>
+    <string name="app_name_persian">کافه‌یاب</string>
 
     <string name="action_search">جستجو</string>
 
@@ -127,6 +128,7 @@
     <string name="login">ورود</string>
     <string name="password">واژه رمز</string>
     <string name="email">آدرس ایمیل</string>
+    <string name="user_profile_text">برای ویرایش اطلاعات خود یا تغییر آواتار ( عکس پروفایل ) به وب سایت کافه یاب مراجعه نمایید</string>
 
     <!--    Permissions    -->
     <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
