--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="filter_no_smoking">بدون سیگار</string>
     <string name="filter_breakfast">صبحانه</string>
     <string name="filter_food">غذا</string>
-    <string name="filter_vegetarianـfood">غذای گیاهی</string>
+    <string name="filter_discount">کافه‌های تخفیف دار</string>
     <string name="filter_wifi">اینترنت</string>
     <!-- <string name="filter_third_wave_coffee">قهوه نسل سوم</string>
     <string name="filter_takea_way">بیرون بر</string>
