--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Cafeyab</string>
     <string name="app_name_persian">کافه‌یاب</string>
+    <string name="faragostareshCopyright">طراحی و توسعه توسط فراگسترش</string>
 
     <string name="action_search">جستجو</string>
 
