--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,15 +138,15 @@
     <string name="about_text_2">پروژه کافه‌یاب به عنوان مرجع معرفی و اطلاع‌رسانی کافه‌های ایران، در تابستان ۹۳ فعالیت خود را آغاز نمود. این وب‌سایت در نظر دارد تا با معرفی کافه‌ها، کافی‌شاپ‌ها، شیرینی فروشی‌ها و قهوه فروشی‌ها، امکان آشنایی کاربران را با این مکان‌ها و خدماتشان، فراهم کند. همچنین امکان درج و به روز رسانی اطلاعات کافه‌ها توسط صاحبان آن‌ها در وب‌سایت وجود دارد.</string>
     <string name="about_text_3">اهداف کافه‌یاب</string>
     <string name="about_text_4">
-        \nفرهنگسازی قهوه و معرفی فرهنگ کافه‌نشینی در ایران
-        \nمعرفی کافه‌های شهر به عموم مردم با اطلاعات دقیق‌تر و باکیفیت‌تر نسبت به تمامی سایت‌های مشابه
-        \nپوشش خبری از همایش‌ها، جشنواره‌ها و گردهمآیی‌های صنف قهوه
-        \nدر دسترس بودن قهوه و تجهیزات مربوط به آن برای عموم مردم، از طریق فروش اینترنتی و تحویل درب منزل
-        \nپایین آوردن قیمت‌ها از طریق کاهش واسطه‌های فروش
-        \nپایین آوردن هزینه‌های کیفی و تبلیغاتی کافه‌ها و برندها
-        \nآشنایی بیشتر مردم با هنر و مبانی اجتماعی مرتبط با کافه‌ها و قهوه
+        - فرهنگسازی قهوه و معرفی فرهنگ کافه‌نشینی در ایران
+        \n- معرفی کافه‌های شهر به عموم مردم با اطلاعات دقیق‌تر و باکیفیت‌تر نسبت به تمامی سایت‌های مشابه
+        \n- پوشش خبری از همایش‌ها، جشنواره‌ها و گردهمآیی‌های صنف قهوه
+        \n- در دسترس بودن قهوه و تجهیزات مربوط به آن برای عموم مردم، از طریق فروش اینترنتی و تحویل درب منزل
+        \n- پایین آوردن قیمت‌ها از طریق کاهش واسطه‌های فروش
+        \n- پایین آوردن هزینه‌های کیفی و تبلیغاتی کافه‌ها و برندها
+        \n- آشنایی بیشتر مردم با هنر و مبانی اجتماعی مرتبط با کافه‌ها و قهوه
     </string>
-    <string name="about_text_version">نسخه نرم افزار : ۲،۰،۰</string>
+    <string name="about_text_version">نسخه نرم افزار : ۲،۰،۱</string>
     <string name="about_text_copyright">تمام حقوق مطالب برای وب سایت کافه یاب محفوظ است. استفاده از مطالب وب سایت و اپلیکشن فقط با ذکر منبع مجاز است.</string>
     <!--    Permissions    -->
     <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
